[tool.poetry]
name = "sql-workshop"
version = "0.1.0"
description = "Pacote para banco da nossa workshop"
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.0"
black = "^23.12.0"
taskipy = "^1.12.2"
isort = "^5.13.2"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && black ."
commit = "git add . && pre-commit run"
